crates/analyzer/tests/snapshots/errors__const_generics_param.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: expression is not a constant
  ┌─ compile_errors/const_generics_param.fe:3:33
  │
3 │         let array: Array<i32, { (1, 2) }>
  │                                 ^^^^^^ expression is required to be constant here

error: feature not yet implemented: non numeric type const generics
  ┌─ compile_errors/const_generics_param.fe:7:33
  │
7 │         let array: Array<i32, { "FOO" }>
  │                                 ^^^^^ not yet implemented

error: zero division error
   ┌─ compile_errors/const_generics_param.fe:11:38
   │
11 │         let array: Array<i32, { 1 - (3 / 0) }>
   │                                      ^^^^^ zero division occurred during constant evaluation

error: zero division error
   ┌─ compile_errors/const_generics_param.fe:15:38
   │
15 │         let array: Array<i32, { 1 - (3 % 0) }>
   │                                      ^^^^^ zero division occurred during constant evaluation

error: overflow error
   ┌─ compile_errors/const_generics_param.fe:19:33
   │
19 │         let array: Array<i32, { 1 << 256 }>
   │                                 ^^^^^^^^ overflow occurred during constant evaluation

error: overflow error
   ┌─ compile_errors/const_generics_param.fe:23:33
   │
23 │         let array: Array<i32, { 0 - 1 }>
   │                                 ^^^^^ overflow occurred during constant evaluation


